[package]
name = "nonogram-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
anyhow = "1.0.88"
serde_json = "1.0.128"
serde_tuple = "0.5.0"
fxhash = "0.2.1"
num-integer = "0.1.46"
