[package]
name = "nonogram-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
serde_tuple = "1.0"
fxhash = "0.2"
num-integer = "0.1"
num-traits = "0.2"
bitvec = "1.0"
